Files: visual treatment for cut items
If I cut a file or a folder in Files, it looks like this:
Or this:
I doesn't look great, especially the grey background colour.
Ideally I'd like a visual style that communicates that the item is active. Perhaps we could use an animation for this (fade transparency in and out?) The other idea I had was a dashed outline.
@bertob @jimmac @snwh any ideas here? If we go for an animation, some motion design would be helpful.