grid-cell: Tone down dashes

- bring closer to Sam's original wireframe, draw the dashed outline
  less emphasized

See https://gitlab.gnome.org/Teams/Design/app-mockups/-/issues/51